--- a/screenshot.html
+++ b/screenshot.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	<title>Load Screenshot</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
+	<style>
+		img{
+		width:100%;
+		float:left;}
+	</style>
 <body>
 <div class="main">
 	<h1>Load Screenshot from json file</h1>
 </div>
-<div class="screenshot"></div>
+	<div class="col-md-12">
+		<div class="screenshot"></div></div>
 
 <script type="text/javascript">
 	$(document).ready(function(){
