--- a/screenshot.html
+++ b/screenshot.html
@@ -15,7 +15,9 @@
 <div class="main">
 	<h1>Load Screenshot from json file</h1>
 </div>
-	<div class="col-md-4">
+	<div class="container">
+		<div class="row">
+	<div class="col-md-12">
 		<div class="screenshot"></div></div>
 
 <script type="text/javascript">
@@ -24,10 +26,13 @@
 	    //console.log(json); // this will show the info it in firebug console
 
 	    for (var i = 0; i  < json.length; i++) {
-	    	$('.screenshot').append('<img src="'+json[i].imageURL+'"/> <a href="'+json[i].imageURL+'" download> Download This Image Please Click Here</a>');
+	    	$('.screenshot').append('<div class="col-md-4"><img src="'+json[i].imageURL+'"/> <a href="'+json[i].imageURL+'" download> Download This Image Please Click Here</a></div>');
 	    }
 		});
 	});
 </script>
+		</div>
+		<div>
+			
 </body>
 </html>
