--- a/screenshot.html
+++ b/screenshot.html
@@ -7,9 +7,18 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 	<style>
+	
 		img{
 		width:100%;
-		float:left;}
+		float:left;
+		border-radius: 0px 40px 0px 40px;
+}
+	.col-md-4 {
+  float: left;
+  padding: 12px;
+  text-align: center;
+}
+
 	</style>
 <body>
 <div class="main">
