--- a/screenshot.html
+++ b/screenshot.html
@@ -7,18 +7,18 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 	<style>
-	
 		img{
 		width:100%;
 		float:left;
 		border-radius: 0px 40px 0px 40px;
+		height: 100%;
 }
 	.col-md-4 {
   float: left;
   padding: 12px;
   text-align: center;
+  height: 200px;
 }
-
 	</style>
 <body>
 <div class="main">
